<resources>
    <string name="app_name">Course-Online</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet,\n consec telur adipiscing elit</string>
    <string name="personal_growth">Personal Growth</string>
    <string name="jelajahi_ciri_ciri_kepribadian_anda_dan_pelajari_cara_mengembangkan_untuk_tumbuh_sebagai_pribadi_yang_lebih_baik">Jelajahi ciri-ciri kepribadian Anda dan pelajari cara mengembangkan untuk tumbuh sebagai pribadi yang lebih baik.</string>
    <string name="module_bermasalah">Module Bermasalah ?</string>
    <string name="mulai">MULAI</string>
    <string name="dummyTextParagraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nunc massa, vestibulum ut orci at, varius ornare purus. Aliquam erat volutpat. Mauris elementum sit amet est placerat vestibulum. Aenean magna turpis, consectetur nec vulputate eget, mollis id nibh. Donec venenatis iaculis augue, in blandit neque posuere convallis. Pellentesque facilisis maximus nunc non luctus. Aliquam sollicitudin luctus blandit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="artikel">Artikel</string>
    <string name="dapatkan_saran_dan_tip_tentang_segala_hal_mulai_dari_kecerdasan_emosional_hingga_menciptakan_hubungan_yang_memuaskan">Dapatkan saran dan tip tentang segala hal mulai dari kecerdasan emosional hingga menciptakan hubungan yang memuaskan.</string>
    <string name="artikel_bermasalah">Artikel Bermasalah?</string>
    <string name="our_motto">Menembus rintangan untuk belajar dan menemukan potensi tersembunyi anda</string>
    <string name="term_of_service">Dengan mendaftar, anda menyetujui <font color='#2a9df4'><![CDATA[Syarat & Ketentuan]]></font> dan <font color='#2a9df4'>Kebijakan Privasi</font> yang berlaku</string>
    <string name="no_modul">Oops!!\nSaat ini modul masih belum tersedia...</string>

    <string-array name="Gender">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>

</resources>