<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Artikel.ArtikelActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_artikel"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#1967D3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/personal_growth"
                android:textColor="@color/white"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_back"
                app:layout_constraintStart_toEndOf="@+id/iv_back"
                app:layout_constraintTop_toTopOf="@+id/iv_back"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/iv_searh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_search_white"
                app:layout_constraintBottom_toBottomOf="@+id/tv_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tb_artikel">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1967D3"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="42dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_artikel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_semibold"
                        android:text="@string/artikel"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tv_desc_artikel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_artikel"
                        android:layout_marginTop="7dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/dapatkan_saran_dan_tip_tentang_segala_hal_mulai_dari_kecerdasan_emosional_hingga_menciptakan_hubungan_yang_memuaskan"
                        android:textColor="@color/white"
                        android:textSize="18sp" />


                    <TextView
                        android:id="@+id/tv_report_promblem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_desc_artikel"
                        android:layout_marginTop="11dp"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/artikel_bermasalah"
                        android:textColor="@color/white"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/laporkan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_desc_artikel"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="11dp"
                        android:layout_toRightOf="@id/tv_report_promblem"
                        android:fontFamily="@font/inter_regular"
                        android:text="Laporkan"
                        android:textColor="@color/black"
                        android:textSize="12dp" />

                    <ImageView
                        android:id="@+id/img_report"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_desc_artikel"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="11dp"
                        android:layout_toRightOf="@+id/laporkan"
                        android:src="@drawable/ic_report_white" />
                </RelativeLayout>

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_artikel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rv_description"
                android:layout_marginTop="62dp"
                tools:listitem="@layout/item_artikel" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>